# wasm-dyn-mem

./: Makefile
c-emsdk/: Makefile  myapp.js
c-emsdk/src/: main.c
c-musllibc-clang/: Makefile
c-musllibc-clang/src/: main.c
rust/: Makefile
rust-bindgen/: Makefile
rust-bindgen/wasm-game-of-life-dlmalloc/: size
rust-bindgen/wasm-game-of-life-dlmalloc-dyn/: Cargo.toml  LICENSE_MIT
rust-bindgen/wasm-game-of-life-dlmalloc-dyn/pkg/: package.json  wasm_game_of_life.js  wasm_game_of_life_bg.wasm
rust-bindgen/wasm-game-of-life-dlmalloc-dyn/src/: lib.rs
rust-bindgen/wasm-game-of-life-dlmalloc/pkg/: wasm_game_of_life.js  wasm_game_of_life_bg.wasm
rust-bindgen/wasm-game-of-life-dlmalloc/src/: lib.rs
rust-bindgen/wasm-game-of-life-wee_alloc-dyn/: Cargo.toml
rust-bindgen/wasm-game-of-life-wee_alloc-dyn/pkg/: wasm_game_of_life_bg.wasm
rust-bindgen/wasm-game-of-life-wee_alloc/pkg/: wasm_game_of_life_bg.wasm
rust-bindgen/wasm-game-of-life-wee_alloc/src/: lib.rs
rust/myapp/: Cargo.toml
rust/myapp/src/: main.rs
