[package]
name = "myapp"
version = "0.1.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false

[dependencies]
wee_alloc = "0.4.2"
